# neocortex-gnn

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
neocortex_gnn/: dataset.py  gnn.py  layers.py  train.py  util.py
notebooks/: 2023-01-13_pdb_to_dummy_input_for_gnn.ipynb
